# eruption

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  vs-chromium-project.txt
src/cpp/: asserts.h  common.h  globals.cpp  globals.h  main.cpp
src/cpp/core/: compiler.h  flathashmap.h  hash.h  types.h
src/cpp/core/smallcontainers/: SCConfig.h  SmallString.h  SmallVector.cpp  SmallVector.h
src/cpp/logging/: log_macro.h  logger.cpp  logger.h
src/cpp/rendering/: driver.cpp  driver.h  renderer.cpp  renderer.h  shader.cpp  shader.h  swapchain.cpp  swapchain.h
src/cpp/rendering/platform/: swapchain_base.cpp  swapchain_base.h  vk_common.h
src/cpp/rendering/platform/dxgi/: swapchain_dxgi.h  swapchain_dxgi.hpp
src/cpp/rendering/platform/vulkan/: swapchain_vulkan.cpp  swapchain_vulkan.h  swapchain_vulkan.hpp
src/cpp/window/: window.cpp  window.h
src/shaders/: common.hlsli  depth_pass.hlsl
